Sun Dec 21 12:08:45 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: added the cast needed to fix #129188 warning

Sat Dec 20 23:37:31 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libexslt/transform.c: fixed Bug 129624 (erroneous output
	  of namespaces)

Sat Dec 20 16:22:11 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed several routines to assure empty
	  string returned (rather than a string object with a null
	  string pointer) (Bug 129561)

Mon Dec 16 00:30:47 PST 2003 William Brack <wbrack@mmm.com.hk>

	* doc/Makefile.am doc/site.xsl doc/api.xsl doc/newapi.xsl
	  doc/xslt.html doc/apibuild.py doc/EXSLT doc/EXSLT/exslt.html:
	  enhanced documentation to include exslt; rebuilt docs
	  
Mon Dec 15 20:33:52 MST 2003 John Fleck <jfleck@inkstain.net>

	* libxslt/xsltutils.h
	* doc/*
	document XSLT_TRACE macro (sort of) and rebuild docs

Thu Dec 11 19:50:41 CET 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* win32/Makefile.mingw win32/configure.js: tried to fix mingw
	  build, no success, it still works halfway.

Thu Dec 11 16:33:41 CET 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* win32/Makefile.* win32/configure.js libxslt/xsltexports.h
	  libexslt/exsltexports.h libxslt/win32config.h: msvc and
	  mingw compilation fixes.

Wed Dec 10 20:37:46 MST 2003 John Fleck <jfleck@inkstain.net>

	* doc/xslt.html docs.html
	remove reference to gtk-doc

Wed Dec 10 17:20:27 CET 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in NEWS doc/*: updated the docs, made release 1.1.1

Wed Dec 10 16:13:38 CET 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in: upp'ed the dependancy to libxml2-2.6.3
	* libxslt/documents.c xsltproc/xsltproc.c: fixed #127473
	  by using the new XInclude APIs provided by 2.6.3...

Mon Dec  8 23:34:32 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c, libxslt/xslt.c: modified to assure
	  XML_CDATA_SECTION_NODE's do not have xmlStringTextNoenc