@@ -1,0 +1,2 @@
+<?xml version="1.0"?>
+<result>This should be matched by the key</result>
